# api/swagger/swagger.yaml
@@ -10,7 +10,6 @@ basePath: /
 schemes:
   # tip: remove http to make production-grade
   - http
-  #- https
 # format of bodies a client can send (Content-Type)
 consumes:
   - application/json
@@ -49,7 +48,7 @@ paths:
     post:
       tags:
         - User
-      description: Register users
+      description: Registers a user
       operationId: registration
       parameters:
         - name: registrationDTO
@@ -60,7 +59,42 @@ paths:
         "200":
           description: Sikeres regisztráció
           schema:
-            $ref: "#/definitions/UserDTO"
+            $ref: '#/definitions/UserDTO'
+  /user/{id}:
+    x-swagger-router-controller: hello_world
+    get:
+      tags:
+        - User
+      description: Returns a user's data
+      operationId: getUser
+      parameters:
+        - name: id
+          in: path
+          description: 'userid'
+          required: true
+          type: number
+      responses:
+        "200":
+          description: sikeres user lekérés
+          schema:
+            $ref: '#/definitions/UserDTO'
+  /users:
+    x-swagger-router-controller: hello_world
+    get:
+      tags:
+        - User
+      operationId: getUsers
+      responses:
+        "200":
+          description: user lista lekeres
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/UserDTO'
+
+
+
+
 # complex objects have schema definitions
 definitions:
   HelloWorldResponse:
@@ -90,10 +124,16 @@ definitions:
       interest:
         type: number
   UserDTO:
-      required:
-        - name
-      properties:
-        name:
-          type: string
-        email:
-          type: string
+    required:
+      - name
+    properties:
+      id:
+        type: number
+      name:
+        type: string
+      email:
+        type: string
+      gender:
+        type: number
+      birthName:
+        type: string
